Change the code so that it no longer relies on values from the .env file.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my_profile",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kxxhan.github.io/my_profile",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -25,7 +26,6 @@
     "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://kxxhan.github.io/my_profile/",
   "eslintConfig": {
     "extends": [
       "react-app",
